--- a/back/pom.xml
+++ b/back/pom.xml
@@ -68,7 +68,7 @@
             <version>0.0.20131108.vaadin1</version>
             <scope>compile</scope>
         </dependency>
-		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+		 https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin
 		<dependency>
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>exec-maven-plugin</artifactId>
@@ -86,7 +86,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<version>2.3.1.RELEASE</version>
 			</plugin>
 		</plugins>
 	</build>
